# ChangeLog for sci-electronics/gresistor
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gresistor/ChangeLog,v 1.7 2011/04/09 21:40:51 arfrever Exp $

  09 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gresistor-0.0.1.ebuild:
  Fix deprecation warning.

  02 Mar 2011; Justin Lecher <jlec@gentoo.org> gresistor-0.0.1.ebuild:
  Correct Slots for gtk 3 introduction to tree

  29 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  gresistor-0.0.1.ebuild:
  stable x86, bug 325751

  27 Jun 2010; Christoph Mende <angelos@gentoo.org> gresistor-0.0.1.ebuild:
  Stable on amd64 wrt bug #325751

  29 Apr 2010; Markos Chandras <hwoarang@gentoo.org> gresistor-0.0.1.ebuild:
  Add pygtk dependency. Fixes bug #316891

  22 Apr 2010; Markos Chandras <hwoarang@gentoo.org> gresistor-0.0.1.ebuild:
  Refactor ebuild to use python functions correctly. Fixes bug #316191

*gresistor-0.0.1 (17 Apr 2010)

  17 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
  +gresistor-0.0.1.ebuild, +metadata.xml:
  Initial commit. Fixes bug #265582. Thanks to Johanus
  <johanus.dwbh@gmail.com> for the initial ebuild
