@@ -1,16 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST gresistor-0.0.1.tar.gz 25038 RMD160 fd4cb28ae4cbc5e1692131bb5d33b8d73f7db4e7 SHA1 41c7b7071ab1384a37effc1ed6880eb1f9a9c2ce SHA256 c343a0cb05422d216eca7941ac11987165630f21516a430e679ac41459c3c4c2
+EBUILD gresistor-0.0.1-r1.ebuild 986 RMD160 77b8c75eec21ea556e6aa35f0ed69e7385103bcf SHA1 e4aa1611625aabb8175a0de65509289f821163f6 SHA256 6ee2d8fe6315d198f0ae30810a1707958a61d6bea2fed28e21bb8e6ada9086e8
 EBUILD gresistor-0.0.1.ebuild 883 RMD160 5468818f770b243b41cb3418f8d398452a5d93a5 SHA1 49e9ea3c84b8b035af301ba2f1eeb09eea5af5f5 SHA256 5582cb670726ab4d249e13b6a2274573623085afe27118348aeff7a56c507aef
-MISC ChangeLog 1191 RMD160 33316206eb8f4214eb3fca6b65a87135480f2099 SHA1 dca6957468f473948ccf4f1c2e5f05ed543a83a7 SHA256 ade9089e5b183a6c5e721eb606b0215f5a401fb6e162f2f6429b273e9567d2f2
+MISC ChangeLog 1345 RMD160 e2adbed9beb0844736444330cd5ea7b6c5c07dab SHA1 9929f740a3e3e6e5007685e64ab7d69a2e27c7f6 SHA256 91ca15e0568f41d3175304288e998e2c338c4ec6fc4c020983531fd49ad2dfdd
 MISC metadata.xml 278 RMD160 85ae612f4b725d8857a7fe0808090691c0e58fbd SHA1 c97840692a46e7d54f22bfcfd0a564a8d08033dd SHA256 07a0afc4dfc12865b213ef6815169e0524357989b213ac40bc9436dea94c3160
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk59r8kACgkQfXuS5UK5QB39HQQAlLNz5eiIBVmuV+new3bg3IFe
-ZyNb5f19ZGIdMpaBxzJvHQ+Qe4BzG3nMSOyMcpOD5O3RXay1O4g0iFk+lGpBMw+e
-3liYrsSfHdxXJPBD55L3xOsVxn4/8pG4bdg9Fd4nbNh032a+zghPs5FoevtqUVrw
-JH/k3PaqxwxBjn5HI9I=
-=EDg/
+iQIcBAEBCgAGBQJP3aPMAAoJEPqDWhW0r/LCp1YQAI43TDMG8pukDJWbGLyDLxPi
+uB3L7ZVHJ/jXGlhs673Tp82n3FiabvNg2D/uF2MQ1g0/oxR6dpjamAzS7qgVHd9R
+uOO+Ar7ANfnaoJ7VqLCblkWsun96dodFgoRBfOtcKJwLjDBMa1waFM5jjuHaeBmL
+9qpGKlJHBJ9MBlAs/f2gaETzu1fxKFCFjjbOLkydCJ4D0VvKxvLtHKjrt1TKzT9/
+pP0fM3G2iRUmQVLLCBRI70dgZIYZSUz2Vy56wMWA82A4U80AqTEjvEjMHAEUbixV
+IFHACp6/r/++rUbD3cwj9Ga/qp+JtH2aIV+OYSxmTInhR5wCQAX/VtdbhMJls2aA
+Z5coaJcyJHTSREE2mq27dVG6OhfrD+Q8VKREOLdt1e94mMR/FYPXOAAJhw45vet4
+yRbEtBsDgIKCXelQSqaFjwS+nJ+DYJLRFurRHqWTkBzvoNvpZUEqSxe3rSD33oFr
+qg5z5+6SzkkaXkrLnIXHQ6uQz/aCl1HDddhhAcE0Bw004Fwrx3eyJ65pj/24IUyn
+9kyRFAd7aKwTi1E9TIyqW4HU6MMCvnNBCW18z6Wiupu1YGSWOY7cd2E5fDbA/gCm
+in6uF32CJupRdFKtRD7d7BFB0/vu3mtvW6gfMPRv08E2VI7+n4huMaBvD9ww+8Bl
+nH1PUZTq3tZWBi539/VO
+=SHq0
 -----END PGP SIGNATURE-----
