@@ -1,6 +1,11 @@
 # ChangeLog for sci-electronics/gresistor
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gresistor/ChangeLog,v 1.7 2011/04/09 21:40:51 arfrever Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-electronics/cvs-repo/gentoo-x86/sci-electronics/gresistor/ChangeLog,v 1.8 2012/06/17 09:30:48 hwoarang Exp $
+
+*gresistor-0.0.1-r1 (17 Jun 2012)
+
+  17 Jun 2012; Markos Chandras <hwoarang@gentoo.org> +gresistor-0.0.1-r1.ebuild:
+  Fix spelling mistakes. Bug #416467
 
   09 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   gresistor-0.0.1.ebuild:
